first step update